apps/comms-relay/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commsrelay
  namespace: yorch-commsrelay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commsrelay
  template:
    metadata:
      labels:
        app: commsrelay
    spec:
      containers:
        - name: commsrelay
          image: registry.yorch.cloud/library/comms-relay:03aa91e93922bffbceabcf93aacf00342f76948c
          ports:
            - containerPort: 3000
          resources:
            limits: {}
      imagePullSecrets:
        - name: harbor-secret
